[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']

[project]
name = "ivmodels"
description = "IV Models"
readme = "README.md"
version = "0.5.1"
requires-python = ">=3.7"
authors = [
    { name = "Malte Londschien", email = "malte@londschien.ch" },
]
urls = {homepage = "https://github.com/mlondschien/ivmodels/"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python"
]
dependencies = [
    "numpy", "scikit-learn", "glum", "scipy"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "ivmodels"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.poetry.dependencies]
sphinx = {version = "^3", optional = true}
sphinx-autodoc-typehints ={version = "^1.11.1", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints"]